--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,27 +3,28 @@ body {
 }
 
 .container {
-    padding: 90px 15px;
+    padding: 0px 15px;
     margin: 0 auto;
 }
 
 header {
     background-color: #008000;
-    height: 90px;
+    height: 100px;
     width: 100%;
     opacity: 0.8;
     position: fixed;
     top: 0;
+    box-shadow: 0px 7px #001000;
 }
 
-.header-logo {
+.header-left {
+    height: 100px;
     float: left;
-    margin: 0px 30px;
+    padding: 5px 0 0 30px;
     color: #ffffff;
-    font-size: 60px;
 }
 
-.header-list {
+.header-right {
     float: right;
     color: #ffffff;
 }
@@ -34,15 +35,12 @@ li {
     list-style: none;
 }
 
-.main {
-    background-color: #c0ffc0;
-    height: 1200px;
+.intro-wrapper {
+    padding: 150px 0 30px 0;
+    background-color: #f0fff0;
 }
 
-.introduction {
-    float: left;
-}
-
-.main img {
-    float: right;
+.carrer-wrapper {
+    padding: 60px 0;
+    background-color: #f0fff0;
 }
