--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,6 +29,12 @@ header {
     color: #ffffff;
 }
 
+.pict-wrapper {
+    padding-top: 150px;
+    background-color: #f0fff0;
+    text-align: center;
+}
+
 li {
     margin: 30px 50px;
     float: left;
@@ -36,7 +42,7 @@ li {
 }
 
 .intro-wrapper {
-    padding: 150px 0 30px 0;
+    padding: 50px 0 30px 0;
     background-color: #f0fff0;
 }
 
