--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,10 @@ body {
     margin: 0;
 }
 
+a{
+    text-decoration: none;
+}
+
 .container {
     padding: 0px 15px;
     margin: 0 auto;
@@ -51,6 +55,32 @@ li {
     background-color: #f0fff0;
 }
 
+.contact-wrapper {
+    padding: 60px 0;
+    background-color: #f0fff0;
+}
+
 .section-title {
     border-bottom: 3px solid #5f5f5f;
+}
+
+.btn {
+    padding: 16px 48px;
+    color: white;
+    border-radius: 16px;
+    display: inline-block;
+    opacity: 0.9;
+    box-shadow: 0px 4px #202050;
+}
+
+.btn:hover {
+    opacity: 1;
+}
+
+.twitter {
+    background-color: #55acee;
+}
+
+.fa {
+    margin: 5px;
 }
